# oxideav-vaapi

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/: config.rs  context.rs  decoder.rs  display.rs  engine.rs  lib.rs  profiles.rs  sys.rs
tests/: capability_dump.rs  round10_codec_id_lookup.rs  round2_init.rs  round3_pipeline.rs  round4_capabilities.rs  round5_decode.rs  round6_engine_info.rs  round7_device_index.rs  round8_codec_profiles.rs  round9_entrypoint_matrix.rs
tests/fixtures/: h264_high_320x240_1frame.h264
